build: Bump minimum GLib dependency to 2.38.0

Since the 0.17.7 release, we’ve actually depended on API from GLib
2.38.0 (G_TEST_DIST), so this will just cause earlier build failure than
before.

This means we can drop some backwards compatibility code for older GLib
releases.

Spotted by Mart Raudsepp in
https://bugzilla.gnome.org/show_bug.cgi?id=780081#c1.

Signed-off-by: Philip Withnall <withnall@endlessm.com>